# haploclique

./: NoMeEdgeCalculator.cpp  NoMeEdgeCalculator.h  hmm.cpp  hmm.h
scripts/: haploclique-assembly
src/: AlignmentRecord.cpp  BamReader.h  CMakeLists.txt  SortedBamReader.cpp  SortedBamReader.h  VariationCaller.cpp  bam-to-alignment-priors.cpp  haploclique.cpp
